@@ -5,6 +5,11 @@ CHANGELOG
 IMPORTANT: "TAILS Candy" is for use with a TAILS persistent volume only, i.e.
 *********  when running TAILS from a USB-stick, SSD card or virtual machine with persistence support.		
 
+November 27th 2015
+******************
+
+- Updated Academic Signature to version v53
+
 November 16th 2015
 ******************
 
